--- a/settings.json
+++ b/settings.json
@@ -9,13 +9,13 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumberr": "62887435047326",
-	"ownername": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-	"botname":"Alphabot",
+	"ownerNumberr": "6285861245611",
+	"ownername": "ᴹᴿ᭄ Amigo ×፝֟͜×",
+	"botname":"AmigoBotz",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
 	"donasi":"donasi.jpg",
 	"captionpay":"Scan untuk melakukan pembayaran",
-	"fake": " 「  ALPHABOT  」\nCreated By ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×"
+	"fake": " 「  AMIGOBOTZ  」\nCreated By ᴹᴿ᭄ Amigo ×፝֟͜×"
 }
